# Merak

./: .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  conanfile.txt  config.json  docker-compose.yml  package-lock.json  package.json
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: lib.rs  main.rs  runtime.rs
cli/: CMakeLists.txt
cli/src/: main.cpp  win_launcher.cpp
cli/src/client/: runtime_client.cpp  runtime_client.hpp
cli/src/commands/: command_registry.cpp  command_registry.hpp  command_router.hpp  worldbuilding_commands.cpp  worldbuilding_commands.hpp
cli/src/output/: cli_output.cpp  cli_output.hpp
cli/src/theme/: theme.cpp  theme.hpp
cli/src/tui/: buffer.hpp  chat_model.hpp  chat_timeline.hpp  colors.hpp  composer.hpp  diff_terminal.hpp  events.hpp  history_cell.hpp  inline_terminal.hpp  panel.hpp  render_frame.hpp  screen_manager.hpp  scrollback_writer.hpp  status_indicator.hpp  terminal_event_reader.hpp  tui_runner.cpp  tui_runner.hpp  welcome.hpp  widget.hpp
cli/src/tui/components/: fuzzy_list.hpp  section_header.hpp  status_bar.hpp
cli/src/tui/composer/: chat_composer.hpp  external_editor.hpp  mention_menu.hpp  text_area.hpp
cli/src/tui/history_cell/: history_cell.hpp  welcome_cell.hpp
cli/src/tui/overlay/: resume_view.hpp
cli/src/tui/panels/: chat_panel.hpp  command_palette.hpp  context_panel.hpp  help_panel.hpp  memory_panel.hpp  model_selector.hpp  tools_panel.hpp
cli/src/tui/persistence/: resume.hpp  transcript.hpp  turn_event.hpp  turn_event_json.hpp
cli/src/tui/syntax/: highlighter.hpp  languages.hpp  theme_map.hpp
cli/src/tui/widget/: block.hpp  code_block.hpp  diff_view.hpp  layout.hpp  markdown_view.hpp  paragraph.hpp  text.hpp
cli/tests/: test_buffer.cpp  test_persistence.cpp  test_runtime_client.cpp  test_syntax.cpp  test_tui_features.cpp  test_tui_model.cpp  test_worldbuilding_commands.cpp
libs/app/: CMakeLists.txt
libs/app/src/: application.cpp
libs/config/: CMakeLists.txt
libs/config/include/merak/: config.hpp  config_loader.hpp
libs/config/src/: config_loader.cpp
libs/config/tests/: test_config.cpp
libs/context/: CMakeLists.txt
libs/context/include/merak/: assembly_trace.hpp  cache_aware_context.hpp  compactor.hpp  context_assembler.hpp  context_binder.hpp  context_optimizer.hpp  context_pipeline.hpp  context_planner.hpp  context_serializer.hpp  pipeline_stats.hpp  spill_store.hpp  token_counter.hpp  tool_result_compactor.hpp
libs/context/src/: cache_aware_context.cpp  compactor.cpp  context_assembler.cpp  context_binder.cpp  context_optimizer.cpp  context_pipeline.cpp  context_planner.cpp  context_serializer.cpp  pipeline_stats.cpp  spill_store.cpp  token_counter.cpp  tool_result_compactor.cpp
libs/context/tests/: test_context.cpp  test_pipeline_hard_trim.cpp  test_serializer_orphans.cpp
libs/core/: CMakeLists.txt
libs/core/include/merak/: error.hpp  execution.hpp  interruption.hpp  json_rpc_client.hpp  loop_host.hpp  message.hpp  pipeline_types.hpp  result.hpp  runtime_event.hpp  section_kind.hpp  tool_meta.hpp  tool_spec.hpp  utilities.hpp
libs/core/src/: json_rpc_client.cpp
libs/core/tests/: test_compile.cpp
libs/http/: CMakeLists.txt
libs/http/include/merak/: http_server.hpp  worldbuilding_http_handler.hpp
libs/http/src/: http_server.cpp  worldbuilding_http_handler.cpp
libs/http/tests/: test_agent_endpoints.cpp  test_http.cpp
libs/knowledge_graph/: CMakeLists.txt
libs/knowledge_graph/src/: kg_formatters.cpp  neo4j_provider.cpp
libs/knowledge_graph/tests/: test_kg_models.cpp  test_kg_provider_mock.cpp
libs/loop/: CMakeLists.txt
libs/loop/include/merak/: agent_loop.hpp  stall_detector.hpp  sub_agent_runner.hpp  turn_guard.hpp  turn_ingestor.hpp  turn_state.hpp
libs/loop/src/: agent_loop.cpp  stall_detector.cpp  sub_agent_runner.cpp  turn_guard.cpp  turn_ingestor.cpp
libs/loop/tests/: test_agent_loop.cpp  test_loop_events.cpp  test_sub_agent_runner.cpp  test_turn_guard.cpp
libs/memory/: CMakeLists.txt
libs/memory/include/merak/: memory_extraction_service.hpp  memory_store.hpp  (+4 more)
libs/memory/src/: memory_extraction_service.cpp  memory_store.cpp  narrative_working_memory.cpp  openai_embedding_provider.cpp  session_journal.cpp
libs/memory/tests/: test_memory_history.cpp
libs/prompts/: CMakeLists.txt
libs/prompts/src/: compositor.cpp  core_prompt.cpp  memory_prompt.cpp  scene_prompt.cpp  skill_prompt.cpp  team_prompt.cpp
libs/prompts/tests/: test_prompts.cpp
libs/storage/: CMakeLists.txt
libs/storage/src/: image_service.cpp  local_file_image_store.cpp  session_store.cpp  session_store_pg.cpp
libs/storage/tests/: test_image_service.cpp  test_local_file_image_store.cpp  test_storage.cpp
libs/tools/: CMakeLists.txt
libs/tools/src/: agent_tool.cpp  ask_user_tool.cpp  builtin_tools.cpp  edit_journal.cpp  fork_skill_tool.cpp  fs_tools.cpp  git_tool.cpp  lsp_tool.cpp  memory_tool.cpp  plan_mode_tools.cpp  search_tools.cpp  session_tool.cpp  shell_tool.cpp  symbols_tool.cpp  task_tool.cpp  tool_registry.cpp  tool_search_tool.cpp  web_fetch_tool.cpp  web_search_tool.cpp
libs/tools/tests/: test_tools.cpp
libs/worldbuilding/: CMakeLists.txt  schema.sql
libs/worldbuilding/src/: agent_store.cpp  card_access.cpp  condition_evaluator.cpp  extraction_service.cpp  foreshadowing_store.cpp  ids.cpp  narrative_store.cpp  pg_helpers.cpp  pipeline.cpp  pipeline_manager.cpp  pipeline_validation.cpp  pipeline_workflow_def.cpp  scene_orchestrator.cpp  secret_store.cpp  sqlite_helpers.cpp  voice_analyzer.cpp  world_store.cpp  worldbuilding_service.cpp  worldbuilding_tools.cpp
libs/worldbuilding/tests/: test_agent_store.cpp  test_condition_evaluator.cpp  test_creation_flow.cpp  test_foreshadowing_secret.cpp  test_helpers.hpp  test_narrative_store.cpp  test_pipeline_manager.cpp  test_pipeline_validation.cpp  test_scene_orchestrator.cpp  test_voice_analyzer.cpp  test_world_store.cpp  test_worldbuilding_e2e.cpp
tests/: CMakeLists.txt
(+398 files in other folders)
