[package]
name = "merak-desktop"
version = "0.1.0"
description = "Merak desktop client"
authors = ["ULookup"]
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "merak_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "merak-desktop"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
